# led-ticker-pool

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/led_ticker_pool/: __init__.py  monitor.py
tests/: test_import_purity.py  test_monitor.py  test_smoke.py
