[project]
name = "led-ticker-pool"
version = "0.1.0"
description = "Pool water-temperature monitor widget for led-ticker (InfluxDB v2 backed)."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "James Awesome", email = "james@morelli.nyc" }]
dependencies = [
    "led-ticker",
    "aiohttp",
]

# The widget is contributed to led-ticker via this entry point. The entry-point
# NAME ("pool") becomes the plugin namespace, so the widget is referenced in
# TOML as `type = "pool.monitor"`.
[project.entry-points."led_ticker.plugins"]
pool = "led_ticker_pool:register"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/led_ticker_pool"]

# led-ticker is not published to PyPI yet. For local development, install it
# editable from a checkout alongside the pool plugin (see README "Development").
# This source pin keeps `uv run`/`uv sync` resolving against that checkout; drop
# it once led-ticker is published.
[tool.uv.sources]
led-ticker = { path = "../led-ticker", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["../led-ticker/tests/stubs"]
